// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots render guidance page 1`] = `
<html>
  <head>
    <title>
      Hello JSX
    </title>
    <link
      href="/resources/main.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="/dist/client.css"
      rel="stylesheet"
      type="text/css"
    />
    <script
      defer="defer"
      src="/dist/client.js"
      type="application/javascript"
    />
    <dynamic-styles />
    <link
      href="/resources/icon.png"
      rel="icon"
      type="image/png"
    />
  </head>
  <body>
    <div
      id="app"
    >
      <div
        className="container"
      >
        <div
          className="container"
        >
          <a
            aria-current={null}
            className="tab"
            href="/home"
            onClick={[Function]}
          >
            home
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/score"
            onClick={[Function]}
          >
            score
          </a>
          <a
            aria-current="page"
            className="tab active"
            href="/guidance"
            onClick={[Function]}
            style={Object {}}
          >
            guidance
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/accounts"
            onClick={[Function]}
          >
            accounts
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/budget"
            onClick={[Function]}
          >
            budget
          </a>
          <a
            aria-current={null}
            className="tab profile"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </div>
        <div
          className="body"
        >
          <div
            className="main"
          >
            <div
              className="title"
            >
              Guidance
            </div>
            <div>
              Loading...
            </div>
          </div>
        </div>
        <div
          className="container"
        >
          <div
            className="section"
          >
            Verified
          </div>
          <div
            className="section"
          >
            Contact Us
          </div>
          <div
            className="section"
          >
            Support
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`snapshots render home page 1`] = `
<html>
  <head>
    <title>
      Hello JSX
    </title>
    <link
      href="/resources/main.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="/dist/client.css"
      rel="stylesheet"
      type="text/css"
    />
    <script
      defer="defer"
      src="/dist/client.js"
      type="application/javascript"
    />
    <dynamic-styles />
    <link
      href="/resources/icon.png"
      rel="icon"
      type="image/png"
    />
  </head>
  <body>
    <div
      id="app"
    >
      <div
        className="container"
      >
        <div
          className="container"
        >
          <a
            aria-current="page"
            className="tab active"
            href="/home"
            onClick={[Function]}
            style={Object {}}
          >
            home
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/score"
            onClick={[Function]}
          >
            score
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/guidance"
            onClick={[Function]}
          >
            guidance
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/accounts"
            onClick={[Function]}
          >
            accounts
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/budget"
            onClick={[Function]}
          >
            budget
          </a>
          <a
            aria-current={null}
            className="tab profile"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </div>
        <div
          className="body"
        >
          <div
            className="main"
          >
            <div
              className="title"
            >
              Home
            </div>
            <div>
              Loading...
            </div>
          </div>
        </div>
        <div
          className="container"
        >
          <div
            className="section"
          >
            Verified
          </div>
          <div
            className="section"
          >
            Contact Us
          </div>
          <div
            className="section"
          >
            Support
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;

exports[`snapshots render score page 1`] = `
<html>
  <head>
    <title>
      Hello JSX
    </title>
    <link
      href="/resources/main.css"
      rel="stylesheet"
      type="text/css"
    />
    <link
      href="/dist/client.css"
      rel="stylesheet"
      type="text/css"
    />
    <script
      defer="defer"
      src="/dist/client.js"
      type="application/javascript"
    />
    <dynamic-styles />
    <link
      href="/resources/icon.png"
      rel="icon"
      type="image/png"
    />
  </head>
  <body>
    <div
      id="app"
    >
      <div
        className="container"
      >
        <div
          className="container"
        >
          <a
            aria-current={null}
            className="tab"
            href="/home"
            onClick={[Function]}
          >
            home
          </a>
          <a
            aria-current="page"
            className="tab active"
            href="/score"
            onClick={[Function]}
            style={Object {}}
          >
            score
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/guidance"
            onClick={[Function]}
          >
            guidance
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/accounts"
            onClick={[Function]}
          >
            accounts
          </a>
          <a
            aria-current={null}
            className="tab"
            href="/budget"
            onClick={[Function]}
          >
            budget
          </a>
          <a
            aria-current={null}
            className="tab profile"
            href="/profile"
            onClick={[Function]}
          >
            Profile
          </a>
        </div>
        <div
          className="body"
        >
          <div
            className="main"
          >
            <div
              className="title"
            >
              Wellness Score
            </div>
            <div>
              Loading...
            </div>
          </div>
        </div>
        <div
          className="container"
        >
          <div
            className="section"
          >
            Verified
          </div>
          <div
            className="section"
          >
            Contact Us
          </div>
          <div
            className="section"
          >
            Support
          </div>
        </div>
      </div>
    </div>
  </body>
</html>
`;
